<resources>
    <string name="app_name">CustomAudioRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="audio_source">Audio Source</string>
    <string name="mono">Mono</string>
    <string name="stereo">Stereo</string>
    <string name="sampling_rate">Sampling Rate</string>
</resources>
